# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
page_loader/: __init__.py  cli.py  io.py
page_loader/scripts/: page_loader.py
tests/: test_io.py
tests/fixtures/: complex_page_after.html  complex_page_before.html  localhost-blog-about_after.html  localhost-blog-about_before.html  page_after.html  page_before.html
