[tool.poetry]
name = "hexlet_code"
version = "0.1.0"
description = ""
authors = ["agmrv <airatgum@gmail.com>"]
packages = [
    { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
